# gtfs_etl

./: .gitignore  README.md  config.ini  gtfs  pyproject.toml  tmp
ott/: __init__.py
ott/gtfs_etl/: __init__.py  cache.py  check.py  convert.py  diff.py  dir2html.py  gtfs_cache.py  info.py  patch.py  utils.py
ott/gtfs_etl/agency/: patch.py
ott/gtfs_etl/agency/SMART/: fare_leg_rules.txt  fare_media.txt  fare_products.txt  fare_transfer_rules.txt  patch.py  rider_categories.txt
ott/gtfs_etl/tests/: test.py
