virtualenvs.create = true
virtualenvs.options.system-site-packages = true

[tool.poetry]
name = "gtfs_etl"
version = "0.0.1"
description = "gtfs etl tools"
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "Mozella 2.x"
readme = "README.md"
packages = [{include = "ott/gtfs_etl"}]

[tool.poetry.dependencies]
python = "^3.6"

"ott.utils" = { path = "../utils/", develop = true }
gtfsdb = { path = "../gtfsdb/", develop = true }
#"ott.utils" = {git = "https://github.com/OpenTransitTools/utils.git", branch = "rtp"}
#gtfsdb = {git = "https://github.com/OpenTransitTools/gtfsdb.git", branch = "rtp"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
system-site-packages = true

[tool.poetry.scripts]
gtfs-update = "ott.gtfs_etl.cache:main"
