virtualenvs.create = true
virtualenvs.options.system-site-packages = true

[tool.poetry]
name = "gtfs_etl"
version = "0.0.1"
description = "gtfs etl tools"
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "Mozella 2.x"
readme = "README.md"
packages = [{include = "ott/gtfs_etl"}]


[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.3.2"
partridge = "1.1.2"

"ott.utils" = { path = "../utils/", develop = true }
#"ott.utils" = {git = "https://github.com/OpenTransitTools/utils.git", branch = "rtp"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
system-site-packages = true

[tool.poetry.scripts]
convert-fares  = "ott.gtfs_etl.cache:convert"

gtfs-update = "ott.gtfs_etl.cache:main"
gtfs-info = "ott.gtfs_etl.info:main"
gtfs-patch = "ott.gtfs_etl.agency.patch:main"
